fix(media-object): media height larger than content on safari

--- a/src/css/component.media-object.css
+++ b/src/css/component.media-object.css
@@ -9,6 +9,8 @@
 }
 
 .media-object__media {
+  /* Else, Safari the media (img, svg,...) height extends */
+  @apply flex items-start;
   flex-basis: content;
   flex-grow: 1;
 }
